--- a/PizzaApp.Web/Views/Home/Index.cshtml
+++ b/PizzaApp.Web/Views/Home/Index.cshtml
@@ -4,9 +4,15 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to @AppName!</h1>
-    <h2>Home of the greatest pizza the Universe has to offer!</h2>
+@section Scripts {
+    <link rel="stylesheet" href="~/css/Home/index.css" asp-append-version="true" />
+}
+
+<div class="text-center greeting-container">
+    <div class="welcome-message">
+        <h1 class="display-4">Welcome to @AppName!</h1>
+        <h2>Home of the greatest pizza the Universe has to offer!</h2>
+    </div>
 
     <a class="btn btn-danger" id="btn-menu" asp-action="Index" asp-controller="Menu">Check our offers!</a>
     
