--- a/PizzaApp.Web/Views/MyPizzas/Create.cshtml
+++ b/PizzaApp.Web/Views/MyPizzas/Create.cshtml
@@ -8,7 +8,7 @@
 }
 <h2>Create Pizza</h2>
 
-<form asp-action="Add" method="post" class="container" name="pizza-form">
+<form asp-action="Create" method="post" class="container" name="pizza-form">
     <div class="mb-3">
         <label asp-for="Pizza.Name" class="form-label">Pizza Name</label>
         <input asp-for="Pizza.Name" class="form-control" />
